MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = extensions messages experimental

noinst_LTLIBRARIES = libopenflow.la

libopenflow_la_SOURCES= \
	openflow.h \
	openflow.cc \
	openflow10.h  \
	openflow12.h \
	openflow13.h \
	openflow_common.h \
	openflow_experimental.h \
	openflow_rofl_exceptions.h \
	cofaction.h \
	cofaction.cc \
	cofactions.h \
	cofactions.cc \
	cofactionset.h \
	cofactionset.cc \
	cofbucket.h \
	cofbucket.cc \
	cofbuckets.h \
	cofbuckets.cc \
	cofinstruction.h \
	cofinstruction.cc \
	cofinstructions.h \
	cofinstructions.cc \
	cofmatch.h \
	cofmatch.cc \
	coxmatch.h \
	coxmatch.cc \
	coxmlist.h \
	coxmlist.cc \
	cofport.h \
	cofport.cc \
	cofports.h \
	cofports.cc \
	cofstats.h \
	cofstats.cc \
	cofdescstats.h \
	cofdescstats.cc \
	cofflowstats.h \
	cofflowstats.cc \
	cofaggrstats.h \
	cofaggrstats.cc \
	coftablestats.h \
	coftablestats.cc \
	cofportstats.h \
	cofportstats.cc \
	cofqueuestats.h \
	cofqueuestats.cc \
	cofgroups.h \
	cofgroups.cc \
	cofgroupstats.h \
	cofgroupstats.cc \
	cofgroupdescs.h \
	cofgroupdescs.cc \
	cofgroupdescstats.h \
	cofgroupdescstats.cc \
	cofgroupfeaturesstats.h \
	cofgroupfeaturesstats.cc \
	cofqueueprop.h \
	cofqueueprop.cc \
	cofqueueproplist.h \
	cofqueueproplist.cc \
	cofpacketqueue.h \
	cofpacketqueue.cc \
	cofpacketqueuelist.h \
	cofpacketqueuelist.cc \
	cofmeterband.h \
	cofmeterband.cc \
	cofmeterbandset.h \
	cofmeterbandset.cc \
	cofhelloelem.h \
	cofhelloelem.cc \
	cofhelloelemversionbitmap.h \
	cofhelloelemversionbitmap.cc \
	cofhelloelems.h \
	cofhelloelems.cc \
	cofflowmod.h \
	cofflowmod.cc \
	cofgroupmod.h \
	cofgroupmod.cc \
	coftablefeatureprop.h \
	coftablefeatureprop.cc \
	coftablefeatureprops.h \
	coftablefeatureprops.cc \
	coftablefeatures.h \
	coftablefeatures.cc \
	coftables.h \
	coftables.cc

libopenflow_la_LIBADD= extensions/libopenflow_extensions.la messages/libopenflow_messages.la experimental/libopenflow_experimental.la

library_includedir=$(includedir)/rofl/common/openflow
library_include_HEADERS = \
	openflow.h \
	openflow10.h  \
	openflow12.h \
	openflow13.h \
	openflow_common.h \
	openflow_experimental.h \
	openflow_rofl_exceptions.h \
	cofaction.h \
	cofactions.h \
	cofactionset.h \
	cofbucket.h \
	cofbuckets.h \
	cofinstruction.h \
	cofinstructions.h \
	cofmatch.h \
	coxmatch.h \
	coxmlist.h \
	cofport.h \
	cofports.h \
	cofstats.h \
	cofdescstats.h \
	cofflowstats.h \
	cofaggrstats.h \
	coftablestats.h \
	cofportstats.h \
	cofqueuestats.h \
	cofgroups.h \
	cofgroupstats.h \
	cofgroupdescs.h \
	cofgroupdescstats.h \
	cofgroupfeaturesstats.h \
	cofqueueprop.h \
	cofqueueproplist.h \
	cofpacketqueue.h \
	cofpacketqueuelist.h \
	cofmeterband.h \
	cofmeterbandset.h \
	cofhelloelem.h \
	cofhelloelemversionbitmap.h \
	cofhelloelems.h \
	cofflowmod.h \
	cofgroupmod.h \
	coftablefeatureprop.h \
	coftablefeatureprops.h \
	coftablefeatures.h \
	coftables.h



