MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libprotocols.la

libprotocols_la_SOURCES= cpppoelist.h cpppoetlv.h farpv4frame.h fetherframe.h ficmpv4frame.h fipv4frame.h ficmpv6frame.h fipv6frame.h fmplsframe.h fpppframe.h fpppoeframe.h ftcpframe.h fsctpframe.h fudpframe.h fvlanframe.h fgtpuframe.h gtpuext.h \
	cpppoelist.cc cpppoetlv.cc farpv4frame.cc fetherframe.cc ficmpv4frame.cc fipv4frame.cc ficmpv6frame.cc fipv6frame.cc fmplsframe.cc fpppframe.cc fpppoeframe.cc fcapwapframe.cc fieee80211frame.cc ftcpframe.cc fsctpframe.cc fudpframe.cc fvlanframe.cc fgtpuframe.cc gtpuext.cc


library_includedir=$(includedir)/rofl/common/protocols
library_include_HEADERS=  cpppoelist.h  farpv4frame.h  ficmpv4frame.h  ficmpv6frame.h  fpppframe.h    ftcpframe.h  fsctpframe.h  fvlanframe.h\
		 cpppoetlv.h   fetherframe.h  fipv4frame.h  fipv6frame.h  fmplsframe.h  fpppoeframe.h  fudpframe.h  fcapwapframe.h fieee80211frame.h  fgtpuframe.h gtpuext.h
