MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libprotocols.la

libprotocols_la_SOURCES= \
	farpv4frame.h \
	farpv4frame.cc \
	fetherframe.h \
	fetherframe.cc \
	ficmpv4frame.h \
	ficmpv4frame.cc \
	fipv4frame.h \
	fipv4frame.cc \
	ficmpv6frame.h \
	ficmpv6frame.cc \
	fipv6frame.h \
	fipv6frame.cc \
	fmplsframe.h \
	fmplsframe.cc \
	ftcpframe.h \
	ftcpframe.cc \
	fsctpframe.h \
	fsctpframe.cc \
	fudpframe.h \
	fudpframe.cc \
	fvlanframe.h \
	fvlanframe.cc \
	fgtpuframe.h \
	fgtpuframe.cc \
	gtpuext.h \
	gtpuext.cc \
	fl2tpv3frame.h \
	fl2tpv3frame.cc \
	clldpattr.h \
	clldpattr.cc \
	clldpattrs.h \
	clldpattrs.cc \
	clldpmsg.h \
	clldpmsg.cc 


library_includedir=$(includedir)/rofl/common/protocols
library_include_HEADERS= \
	farpv4frame.h \
	ficmpv4frame.h \
	ficmpv6frame.h \
	ftcpframe.h \
	fsctpframe.h \
	fvlanframe.h \
	fetherframe.h \
	fipv4frame.h \
	fipv6frame.h \
	fmplsframe.h \
	fudpframe.h \
	fgtpuframe.h \
	gtpuext.h \
	fl2tpv3frame.h \
	clldpattr.h \
	clldpattrs.h \
	clldpmsg.h 
