MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = librofl_control.la

librofl_control_ladir = $(includedir)/rofl/controller/control

librofl_control_la_HEADERS = cadapt.h \
			cfibentry.h \
			cfwdelem.h \
			cfwdentry.h \
			cfwdtable.h \
			ctlbase.h \
			cfttable.h \
			cgttable.h \
			cftentry.h \
			cgtentry.h 


librofl_control_la_SOURCES = cadapt.h  cfibentry.h  cfwdelem.h  cfwdentry.h  cfwdtable.h  ctlbase.h cfttable.h cgttable.h cftentry.h cgtentry.h \
			  cadapt.cc cfibentry.cc cfwdelem.cc cfwdentry.cc cfwdtable.cc ctlbase.cc cfttable.cc cgttable.cc cftentry.cc cgtentry.cc

librofl_control_la_LIBADD = #../../common/librofl_common.la


library_includedir=$(includedir)/rofl/controller/control
library_include_HEADERS = cadapt.h  cfibentry.h  cfwdelem.h  cfwdentry.h cfwdtable.h  ctlbase.h  cfttable.h  cgttable.h  cftentry.h  cgtentry.h 

#AM_LDFLAGS= -static
