MAINTAINERCLEANFILES = Makefile.in

# build this before anything else
#BUILT_SOURCES = platform_lock.h

noinst_LTLIBRARIES = librofl_pipeline_platform.la


librofl_pipeline_platform_ladir = $(includedir)/rofl/pipeline/platform

librofl_pipeline_platform_la_HEADERS = \
	cutil.h \
	atomic_operations.h \
	lock.h \
	memory.h
	
librofl_pipeline_platform_la_SOURCES = \
	cutil.h \
	atomic_operations.h \
	lock.h \
	memory.h
	
	
