MAINTAINERCLEANFILES = Makefile.in

# build this before anything else

noinst_LTLIBRARIES = librofl_pipeline_platform.la

librofl_pipeline_platform_ladir = $(includedir)/rofl/pipeline/platform

librofl_pipeline_platform_la_HEADERS = \
	cutil.h \
	atomic_operations.h \
	lock.h \
	memory.h \
	platform_hooks.h

librofl_pipeline_platform_la_SOURCES = \
	cutil.h \
	atomic_operations.h \
	lock.h \
	memory.h \
	platform_hooks.h