MAINTAINERCLEANFILES = Makefile.in

SUBDIRS = openflow

noinst_LTLIBRARIES = librofl_pipeline_platform.la

librofl_pipeline_platform_ladir = $(includedir)/rofl/pipeline/platform

librofl_pipeline_platform_la_HEADERS = \
	cutil.h \
	atomic_operations.h \
	lock.h \
	memory.h \
	platform_hooks.h\
	platform_of12_hooks.h

librofl_pipeline_platform_la_SOURCES = \
	cutil.h \
	atomic_operations.h \
	lock.h \
	memory.h \
	platform_hooks.h
