MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libplatform_unix.la

libplatform_unix_la_SOURCES = cethport.cc clinuxport.cc cmmapport.cc cnetmapport.cc cpipe.cc crandom.cc csyslog.cc ctapport.cc cunixenv.cc cunixport.cc \
	cethport.h clinuxport.h cmmapport.h cnetmapport.h cpipe.h crandom.h csyslog.h ctapport.h cunixenv.h cunixport.h

