MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libplatform_unix.la

libplatform_unix_la_SOURCES = \
	cpipe.cc \
	crandom.cc \
	csyslog.cc \
	cunixenv.cc \
	cpipe.h \
	crandom.h \
	csyslog.h \
	cunixenv.h

library_includedir = $(includedir)/rofl/platform/unix

library_include_HEADERS = \
	cpipe.h \
	crandom.h \
	csyslog.h \
	cunixenv.h 

