MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libplatform_unix.la

libplatform_unix_la_SOURCES = \
	csyslog.cc \
	cunixenv.cc \
	csyslog.h \
	cunixenv.h \
	cdaemon.h \
	cdaemon.cc

library_includedir = $(includedir)/rofl/platform/unix

library_include_HEADERS = \
	csyslog.h \
	cunixenv.h  \
	cdaemon.h

