MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libexpprotocols.la

libprotocols_la_SOURCES= clldplist.h clldptlv.h flldpframe.h lldp.h \
	clldplist.cc clldptlv.cc flldpframe.cc 


library_includedir=$(includedir)/rofl/common/experimental/protocols
library_include_HEADERS= clldplist.h  flldpframe.h  clldptlv.h lldp.h	
