MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libopenflow_messages.la
libopenflow_messages_la_SOURCES = \
	cofmsg_aggr_stats.h \
	cofmsg_barrier.h \
	cofmsg_config.h \
	cofmsg_desc_stats.h \
	cofmsg_echo.h \
	cofmsg_error.h \
	cofmsg_experimenter_stats.h \
	cofmsg_features.h \
	cofmsg_flow_mod.h \
	cofmsg_flow_removed.h \
	cofmsg_flow_stats.h \
	cofmsg_group_desc_stats.h \
	cofmsg_group_features_stats.h \
	cofmsg_group_mod.h \
	cofmsg_group_stats.h \
	cofmsg.h \
	cofmsg_hello.h \
	cofmsg_packet_in.h \
	cofmsg_packet_out.h \
	cofmsg_port_mod.h \
	cofmsg_port_stats.h \
	cofmsg_port_desc_stats.h \
	cofmsg_port_status.h \
	cofmsg_queue_get_config.h \
	cofmsg_queue_stats.h \
	cofmsg_role.h \
	cofmsg_stats.h \
	cofmsg_table_mod.h \
	cofmsg_table_stats.h \
	cofmsg_table_features_stats.h \
	cofmsg_experimenter.h \
	cofmsg_aggr_stats.cc \
	cofmsg_barrier.cc \
	cofmsg.cc \
	cofmsg_config.cc \
	cofmsg_desc_stats.cc \
	cofmsg_echo.cc \
	cofmsg_error.cc \
	cofmsg_experimenter_stats.cc \
	cofmsg_features.cc \
	cofmsg_flow_mod.cc \
	cofmsg_flow_removed.cc \
	cofmsg_flow_stats.cc \
	cofmsg_group_desc_stats.cc \
	cofmsg_group_features_stats.cc \
	cofmsg_group_mod.cc \
	cofmsg_group_stats.cc \
	cofmsg_hello.cc \
	cofmsg_packet_in.cc \
	cofmsg_packet_out.cc \
	cofmsg_port_mod.cc \
	cofmsg_port_stats.cc \
	cofmsg_port_desc_stats.cc \
	cofmsg_port_status.cc \
	cofmsg_queue_get_config.cc \
	cofmsg_queue_stats.cc \
	cofmsg_role.cc \
	cofmsg_stats.cc \
	cofmsg_table_mod.cc \
	cofmsg_table_stats.cc \
	cofmsg_table_features_stats.cc \
	cofmsg_experimenter.cc \
	cofmsg_async_config.cc \
	cofmsg_meter_mod.cc \
	cofmsg_meter_features_stats.cc \
	cofmsg_meter_stats.cc \
	cofmsg_meter_config_stats.cc

library_includedir=$(includedir)/rofl/common/openflow/messages
library_include_HEADERS = \
	cofmsg_aggr_stats.h \
	cofmsg_barrier.h \
	cofmsg_config.h \
	cofmsg_desc_stats.h \
	cofmsg_echo.h \
	cofmsg_error.h \
	cofmsg_experimenter_stats.h \
	cofmsg_features.h \
	cofmsg_flow_mod.h \
	cofmsg_flow_removed.h \
	cofmsg_flow_stats.h \
	cofmsg_group_desc_stats.h \
	cofmsg_group_features_stats.h \
	cofmsg_group_mod.h \
	cofmsg_group_stats.h \
	cofmsg.h \
	cofmsg_hello.h \
	cofmsg_packet_in.h \
	cofmsg_packet_out.h \
	cofmsg_port_mod.h \
	cofmsg_port_stats.h \
	cofmsg_port_desc_stats.h \
	cofmsg_port_status.h \
	cofmsg_queue_get_config.h \
	cofmsg_queue_stats.h \
	cofmsg_role.h \
	cofmsg_stats.h \
	cofmsg_table_mod.h \
	cofmsg_table_stats.h \
	cofmsg_table_features_stats.h \
	cofmsg_experimenter.h \
	cofmsg_async_config.h \
	cofmsg_meter_mod.h \
	cofmsg_meter_features_stats.h \
	cofmsg_meter_stats.h \
	cofmsg_meter_config_stats.h
