MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = librofl_pipeline_common.la

librofl_pipeline_common_ladir = $(includedir)/rofl/datapath/pipeline/common

librofl_pipeline_common_la_HEADERS = \
	datapacket.h \
	ternary_fields.h \
	wrap_types.h \
	large_types.h

librofl_pipeline_common_la_SOURCES = \
	datapacket.h \
	ternary_fields.c \
	ternary_fields.h
