MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = librofl_pipeline_common.la

librofl_pipeline_common_ladir = $(includedir)/rofl/datapath/pipeline/common

librofl_pipeline_common_la_HEADERS = \
	bitmap.h \
	datapacket.h \
	ipv6_exthdr.h \
	large_types.h \
	packet_matches.h \
	ternary_fields.h \
	wrap_types.h 

librofl_pipeline_common_la_SOURCES = \
	packet_matches.c \
	ternary_fields.c 
