MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = librofl_pipeline_platform.la

librofl_pipeline_platform_ladir = $(includedir)/rofl/datapath/pipeline/platform

librofl_pipeline_platform_la_HEADERS = \
	atomic_operations.h \
	lock.h \
	likely.h \
	memory.h \
	packet.h \
	timing.h

librofl_pipeline_platform_la_SOURCES =
